Working on Data Ingestion

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ PYAML
 matplotlib
 sacrebleu 
 torch
-python-box==6.0.2
+python-box====5.4.1
 ensure==1.0.2
 fastapi==0.78.0
 uvicorn==0.18.3
 Jinja2==3.1.2
-mypy-boto-s3
+mypy-boto3-s3
 -e .
+
+#python-box==6.0.2 for python >=3.10
