Data Validation Completed

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,4 +5,9 @@ data_ingestion:
   source_URL: https://github.com/entbappy/Branching-tutorial/raw/refs/heads/master/samsumdata.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion/DataSet
+
+data_Validation:
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_Validation/status.txt
+  ALL_REQUIRED_FILES: ["train","test","validation","dataset_dict.json"]
    
